week-08/01-netpol-allow.yaml
# Allow frontend to access backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  # Apply to backend pods
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Ingress

  ingress:
    # Allow from frontend pods
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 80
